Added a simple plugin-system for translators written in Python.
Added environment variables SOFT_TRANSLATORS and SOFT_ENTITIES
for search path to translators and entities.

--- a/foreign/python/test/softpy/CMakeLists.txt
+++ b/foreign/python/test/softpy/CMakeLists.txt
@@ -29,6 +29,9 @@ if(PYTHONINTERP_FOUND AND PYTHONLIBS_FOUND)
     ENVIRONMENT "SOFTSTORAGE=${SOFTSTORAGE}:$ENV{SOFTSTORAGE}")
 
   set_property(TEST ${PROJECT_NAME} APPEND PROPERTY
+    ENVIRONMENT "SOFT_TRANSLATORS=${CMAKE_CURRENT_SOURCE_DIR}:${SOFT_TRANSLATORS}:$ENV{SOFT_TRANSLATORS}")
+
+  set_property(TEST ${PROJECT_NAME} APPEND PROPERTY
     ENVIRONMENT "PYTHONPATH=${PYTHONPATH}:$ENV{PYTHONPATH}")
 
 else()
