--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ option (WITH_PLUGIN_GSL "Compile GSL plugin"              OFF)
 option (WITH_PLUGIN_NLOPT "Compile NLOpt plugin"          OFF)
 option (WITH_PLUGIN_HD5 "Compile HDF5 plugin"             OFF)
 option (WITH_PLUGIN_MONGO "Compile MongoDB plugin"        OFF)
+option (WITH_STORAGE_CSV "Compile CSV plugin (experimental)" OFF)
 option (WITH_FOREIGN_FORTRAN "Compile with Fortran API"   OFF)
 option (WITH_FOREIGN_PYTHON "Compile with Python API"     OFF)
 option (WITH_NUMERICS "Compile with SOFT Numerics"        OFF)
@@ -48,6 +49,8 @@ if (WITH_PORTO)
   set(WITH_PLUGIN_SOFT_KERNEL ON)
   set(WITH_STORAGE_EXTERNAL ON)
   set(WITH_STORAGE_JSON ON)
+  set(WITH_PLUGIN_MONGO ON)
+  set(WITH_STORAGE_CSV ON)
   set(WITH_STORAGE_MONGO ON)
 endif()
 
@@ -269,6 +272,10 @@ endif (WITH_STORAGE_MONGO)
 if (WITH_STORAGE_JSON)
   add_subdirectory(storage/src/plugins/json)
 endif (WITH_STORAGE_JSON)
+
+if (WITH_STORAGE_CSV)
+  add_subdirectory(storage/src/plugins/csv)
+endif (WITH_STORAGE_CSV)
 
 if (WITH_STORAGE_EXTERNAL)
   add_subdirectory(storage/src/plugins/external)
