SOFT-151 More renaming of REMARC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -363,16 +363,16 @@ if (WITH_PORTO)
   add_subdirectory(porto/test/codegen)
   add_subdirectory(porto/src/json)
   add_subdirectory(porto/src/chemkin)
-  add_subdirectory(porto/src/remarkinit)
+  add_subdirectory(porto/src/remarcinit)
   add_subdirectory(porto/src/xyplot)
   add_subdirectory(porto/src/dft-prepare)
-  add_subdirectory(porto/src/remark-wrapper)
+  add_subdirectory(porto/src/remarc-wrapper)
   add_subdirectory(porto/src/parscale-effectiveness-factor)
 
  if (WITH_TESTS)
    add_subdirectory(porto/test/json)
    add_subdirectory(porto/test/chemkin)
-   add_subdirectory(porto/test/remarkinit)
+   add_subdirectory(porto/test/remarcinit)
    add_subdirectory(porto/test/thirdParty/chemkinReader)
    add_subdirectory(porto/test/thirdParty/remarcReader)
    add_subdirectory(porto/test/parscale)
