--- a/storage/src/plugins/json/CMakeLists.txt
+++ b/storage/src/plugins/json/CMakeLists.txt
@@ -24,3 +24,5 @@ set(${PROJECT_NAME}_LIBS
   CACHE INTERNAL "${PROJECT_NAME}: Link Libs" FORCE)
 
 install_runtime_library(${PROJECT_NAME} ${STORAGE_PLUGINS_INSTALL_DIR})
+install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink $ENV{SOFTBASE}/${STORAGE_PLUGINS_INSTALL_DIR}/lib${PROJECT_NAME}.so $ENV{SOFTBASE}/${LIB_INSTALL_DIR}/lib${PROJECT_NAME}.so)")
+install(CODE "MESSAGE(\"-- Created symlink: $ENV{SOFTBASE}/${LIB_INSTALL_DIR}/lib${PROJECT_NAME}.so -> $ENV{SOFTBASE}/${STORAGE_PLUGINS_INSTALL_DIR}/lib${PROJECT_NAME}.so \")")
