--- a/storage/src/plugins/mongo2/CMakeLists.txt
+++ b/storage/src/plugins/mongo2/CMakeLists.txt
@@ -27,3 +27,5 @@ install(TARGETS ${PROJECT_NAME}
   LIBRARY DESTINATION ${STORAGE_PLUGINS_INSTALL_DIR}
   ARCHIVE DESTINATION ${STORAGE_PLUGINS_INSTALL_DIR}
 )
+install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink $ENV{SOFTBASE}/${STORAGE_PLUGINS_INSTALL_DIR}/lib${PROJECT_NAME}.so $ENV{SOFTBASE}/${LIB_INSTALL_DIR}/lib${PROJECT_NAME}.so)")
+install(CODE "MESSAGE(\"-- Created symlink: $ENV{SOFTBASE}/${LIB_INSTALL_DIR}/lib${PROJECT_NAME}.so -> $ENV{SOFTBASE}/${STORAGE_PLUGINS_INSTALL_DIR}/lib${PROJECT_NAME}.so \")")
