--- a/tools/src/plugins/hdf5/CMakeLists.txt
+++ b/tools/src/plugins/hdf5/CMakeLists.txt
@@ -20,3 +20,5 @@ target_link_libraries(${PROJECT_NAME} ${LINK_LIBS})
 install(TARGETS ${PROJECT_NAME}
   LIBRARY DESTINATION ${SCRIPT_PLUGINS_INSTALL_DIR}
   ARCHIVE DESTINATION ${SCRIPT_PLUGINS_INSTALL_DIR})
+install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink $ENV{SOFTBASE}/${SCRIPT_PLUGINS_INSTALL_DIR}/lib${PROJECT_NAME}.so $ENV{SOFTBASE}/${LIB_INSTALL_DIR}/lib${PROJECT_NAME}.so)")
+install(CODE "MESSAGE(\"-- Created symlink: $ENV{SOFTBASE}/${LIB_INSTALL_DIR}/lib${PROJECT_NAME}.so -> $ENV{SOFTBASE}/${SCRIPT_PLUGINS_INSTALL_DIR}/lib${PROJECT_NAME}.so \")")
