--- a/storage/src/plugins/hdf5/CMakeLists.txt
+++ b/storage/src/plugins/hdf5/CMakeLists.txt
@@ -22,3 +22,6 @@ set(${PROJECT_NAME}_INCLUDE_DIRS
 install(TARGETS ${PROJECT_NAME}
   ARCHIVE DESTINATION ${STORAGE_PLUGINS_INSTALL_DIR}
   LIBRARY DESTINATION ${STORAGE_PLUGINS_INSTALL_DIR})
+
+install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink ${CMAKE_INSTALL_PREFIX}/${STORAGE_PLUGINS_INSTALL_DIR}/lib${PROJECT_NAME}.so ${CMAKE_INSTALL_PREFIX}/${LIB_INSTALL_DIR}/lib${PROJECT_NAME}.so )")
+install(CODE "MESSAGE(\"-- Created symlink: ${CMAKE_INSTALL_PREFIX}/${LIB_INSTALL_DIR}/lib${PROJECT_NAME}.so -> ${CMAKE_INSTALL_PREFIX}/${STORAGE_PLUGINS_INSTALL_DIR}/lib${PROJECT_NAME}.so  \")")
