--- a/storage/src/plugins/external/CMakeLists.txt
+++ b/storage/src/plugins/external/CMakeLists.txt
@@ -29,3 +29,5 @@ install(TARGETS ${PROJECT_NAME}
   ARCHIVE DESTINATION ${STORAGE_PLUGINS_INSTALL_DIR}
 )
 
+install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink ${CMAKE_INSTALL_PREFIX}/${STORAGE_PLUGINS_INSTALL_DIR}/lib${PROJECT_NAME}.so ${CMAKE_INSTALL_PREFIX}/${LIB_INSTALL_DIR}/lib${PROJECT_NAME}.so )")
+install(CODE "MESSAGE(\"-- Created symlink: ${CMAKE_INSTALL_PREFIX}/${LIB_INSTALL_DIR}/lib${PROJECT_NAME}.so -> ${CMAKE_INSTALL_PREFIX}/${STORAGE_PLUGINS_INSTALL_DIR}/lib${PROJECT_NAME}.so  \")")
