--- a/storage/src/plugins/mongo2/CMakeLists.txt
+++ b/storage/src/plugins/mongo2/CMakeLists.txt
@@ -26,4 +26,6 @@ set(${PROJECT_NAME}_LIBS
 install(TARGETS ${PROJECT_NAME}
   LIBRARY DESTINATION ${STORAGE_PLUGINS_INSTALL_DIR}
   ARCHIVE DESTINATION ${STORAGE_PLUGINS_INSTALL_DIR}
-)
+  )
+install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink ${CMAKE_INSTALL_PREFIX}/${STORAGE_PLUGINS_INSTALL_DIR}/lib${PROJECT_NAME}.so ${CMAKE_INSTALL_PREFIX}/${LIB_INSTALL_DIR}/lib${PROJECT_NAME}.so )")
+install(CODE "MESSAGE(\"-- Created symlink: ${CMAKE_INSTALL_PREFIX}/${LIB_INSTALL_DIR}/lib${PROJECT_NAME}.so -> ${CMAKE_INSTALL_PREFIX}/${STORAGE_PLUGINS_INSTALL_DIR}/lib${PROJECT_NAME}.so  \")")
