SOFT-153 Added Phenom input file generation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -368,7 +368,8 @@ if (WITH_PORTO)
   add_subdirectory(porto/src/dft-prepare)
   add_subdirectory(porto/src/remarc-wrapper)
   add_subdirectory(porto/src/parscale-effectiveness-factor)
-
+  add_subdirectory(porto/src/phenom)
+  
  if (WITH_TESTS)
    add_subdirectory(porto/test/json)
    add_subdirectory(porto/test/chemkin)
