--- a/porto/test/remarcinit/CMakeLists.txt
+++ b/porto/test/remarcinit/CMakeLists.txt
@@ -1,4 +1,4 @@
-project (porto-remarkinit-test C CXX)
+project (porto-remarcinit-test C CXX)
 
 find_package(GTest)
 
@@ -9,10 +9,10 @@ if(GTEST_FOUND)
   aux_source_directory(. SRC_LIST)
   add_executable(${PROJECT_NAME} ${SRC_LIST})
   include_directories(
-    ${porto-remarkinit_INCLUDE_DIRS}
+    ${porto-remarcinit_INCLUDE_DIRS}
     ${GTEST_INCLUDE_DIRS})
   target_link_libraries(${PROJECT_NAME}
-    ${porto-remarkinit_LIBS}
+    ${porto-remarcinit_LIBS}
     ${GTEST_LIBRARIES})
   target_compile_features(${PROJECT_NAME} PUBLIC cxx_constexpr)
     add_test(${PROJECT_NAME}
@@ -27,7 +27,7 @@ if(GTEST_FOUND)
   endif()
 
   set_property(TEST ${PROJECT_NAME} APPEND PROPERTY
-    ENVIRONMENT "SOFTSTORAGE=${SOFTSTORAGE}:${porto-remarkinit_BINARY_DIR}:$ENV{SOFTSTORAGE}")
+    ENVIRONMENT "SOFTSTORAGE=${SOFTSTORAGE}:${porto-remarcinit_BINARY_DIR}:$ENV{SOFTSTORAGE}")
 
  
 else(GTEST_FOUND)
