--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,20 +17,22 @@ include(CMakeToolsHelpers OPTIONAL)
 #   * TESTS depends on: FOREIGN_C, STORAGE_JSON
 #   * PYTHON depends on: FOREIGN_C
 #   * +++
+OPTION(BUILD_SHARED_LIBS "Build package with shared libraries." ON)
 option (WITH_TESTS "Compile tests"                        OFF)
 option (WITH_STORAGE_JSON "JSON storage support"          OFF)
 option (WITH_PLUGIN_SOFT_KERNEL "Compile kernel plugin"   OFF)
 option (WITH_STORAGE_EXTERNAL "External storage support"  OFF)
-option (WITH_FOREIGN_C "Compile with C API"               OFF)
+set(WITH_FOREIGN_C On)
+#option (WITH_FOREIGN_C "Compile with C API"               OFF)
 option (WITH_STORAGE_MONGO "MongoDB storage support"      OFF)
 option (WITH_WEB "Compile with Web support"               OFF)
 option (WITH_HSM "Compile with HSM plugin"                OFF)
 option (WITH_STORAGE_HD5 "HDF5 storage support"           OFF)
-option (WITH_PLUGIN_GSL "Compile GSL plugin"              OFF)
-option (WITH_PLUGIN_NLOPT "Compile NLOpt plugin"          OFF)
+#option (WITH_PLUGIN_GSL "Compile GSL plugin"              OFF)
+#option (WITH_PLUGIN_NLOPT "Compile NLOpt plugin"          OFF)
 option (WITH_PLUGIN_HD5 "Compile HDF5 plugin"             OFF)
 option (WITH_PLUGIN_MONGO "Compile MongoDB plugin"        OFF)
-option (WITH_FOREIGN_FORTRAN "Compile with Fortran API"   OFF)
+#option (WITH_FOREIGN_FORTRAN "Compile with Fortran API"   OFF)
 option (WITH_FOREIGN_PYTHON "Compile with Python API"     OFF)
 option (WITH_NUMERICS "Compile with SOFT Numerics"        OFF)
 option (USE_PYTHON3 "Create Python 3 bindings instead of Python 2" OFF)
@@ -40,6 +42,12 @@ option (BUILD_MONGOC "Download and build mongo C driver"  OFF)
 option (BUILD_GTEST "Download and build Google Test"      OFF)
 
 set (SOFT_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
+
+if(BUILD_SHARED_LIBS)
+  set(BUILD_TYPE SHARED)
+else()
+  set(BUILD_TYPE STATIC)
+endif()
 
 # If we have Porto selected, this has some implications to which other plugins we also need
 if (WITH_PORTO)
@@ -201,8 +209,6 @@ set (SCRIPT_PLUGINS_INSTALL_DIR ${SOFTBASE}/plugins)
 set (SIMUDF_PLUGINS_DIR ${SOFTBASE}/udf)
 set (INCLUDE_INSTALL_DIR include/${PROJECT_NAME})
 
-
-
 # Platform-dependent file extensions
 if(WIN32)
   set(EXEEXT ".exe")
@@ -268,7 +274,14 @@ endif (WITH_STORAGE_MONGO)
 
 if (WITH_STORAGE_JSON)
   add_subdirectory(storage/src/plugins/json)
+  if (WITH_TESTS)
+    add_subdirectory(storage/test/plugins/json)
+  endif (WITH_TESTS)
 endif (WITH_STORAGE_JSON)
+
+#if (WITH_STORAGE_CSV)
+#  add_subdirectory(storage/src/plugins/csv)
+#endif (WITH_STORAGE_CSV)
 
 if (WITH_STORAGE_EXTERNAL)
   add_subdirectory(storage/src/plugins/external)
@@ -315,9 +328,11 @@ endif(WITH_WEB)
 
 # Foreign
 if (WITH_FOREIGN_C)
-  if (WITH_TESTS)
-    add_subdirectory(foreign/c/test/softc)
-    add_subdirectory(foreign/c/test/storage)
+  if (WITH_TESTS)    
+    if (WITH_STORAGE_HD5)
+      add_subdirectory(foreign/c/test/softc)
+      add_subdirectory(foreign/c/test/storage)
+    endif (WITH_STORAGE_HD5)
   endif (WITH_TESTS)
 endif (WITH_FOREIGN_C)
 
@@ -356,16 +371,16 @@ if (WITH_PORTO)
   add_subdirectory(porto/test/codegen)
   add_subdirectory(porto/src/json)
   add_subdirectory(porto/src/chemkin)
-  add_subdirectory(porto/src/remarkinit)
+  add_subdirectory(porto/src/remarcinit)
   add_subdirectory(porto/src/xyplot)
   add_subdirectory(porto/src/dft-prepare)
-  add_subdirectory(porto/src/remark-wrapper)
+  add_subdirectory(porto/src/remarc-wrapper)
   add_subdirectory(porto/src/parscale-effectiveness-factor)
 
  if (WITH_TESTS)
    add_subdirectory(porto/test/json)
    add_subdirectory(porto/test/chemkin)
-   add_subdirectory(porto/test/remarkinit)
+   add_subdirectory(porto/test/remarcinit)
    add_subdirectory(porto/test/thirdParty/chemkinReader)
    add_subdirectory(porto/test/thirdParty/remarcReader)
    add_subdirectory(porto/test/parscale)
