--- a/core/src/kernel/CMakeLists.txt
+++ b/core/src/kernel/CMakeLists.txt
@@ -8,7 +8,6 @@ set (CMAKE_AUTOMOC ON)
 configure_file("config.h.in" "config.h")
 
 set (LINK_LIBS ${LINK_LIBS}
-  # ${BSON_LIBRARIES} # TODO: It seems this is not needed for the minimal build
   Qt5::Core
   Qt5::Network
   Qt5::Script
@@ -18,9 +17,12 @@ aux_source_directory(. SRC_LIST)
 add_library (${PROJECT_NAME} SHARED ${SRC_LIST})
 
 include_directories(
-   ${CMAKE_CURRENT_BINARY_DIR}
-   # ${BSON_INCLUDE_DIR} # TODO: It seems this is not needed for the minimal build
-   )
+  ${CMAKE_CURRENT_BINARY_DIR}
+  )
+
+target_include_directories(${PROJECT_NAME} PUBLIC
+  ${CMAKE_CURRENT_SOURCE_DIR}
+  ${CMAKE_CURRENT_BINARY_DIR})
 
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_constexpr)
 target_link_libraries(${PROJECT_NAME} ${LINK_LIBS})
@@ -32,7 +34,6 @@ generate_export_header(${PROJECT_NAME})
 set(${PROJECT_NAME}_INCLUDE_DIRS
   ${PROJECT_SOURCE_DIR}
   ${CMAKE_CURRENT_BINARY_DIR}
-  ${BSON_INCLUDE_DIR}
   CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE)
 
 set(${PROJECT_NAME}_LIBS
