--- a/core/test/kernel/CMakeLists.txt
+++ b/core/test/kernel/CMakeLists.txt
@@ -15,35 +15,32 @@ if(GTEST_FOUND)
   add_executable(${PROJECT_NAME}
     ${SRC_LIST}
     ${C_SOURCE_TEMPLATE}
-    ${C_HEADER_TEMPLATE}
+    ${C_HEADER_TEMPLATE}    
     ${test-entities_ENTITIES}
     )
   include_directories(
-    "${SOFT_ROOT}/foreign/c/src/softc"
     ${test-entities_INCLUDE_DIRS}
     ${soft-kernel_INCLUDE_DIRS}
     ${softc_INCLUDE_DIRS}
-    ${soft-storage-plugins-json_INCLUDE_DIRS}
     ${GTEST_INCLUDE_DIRS}
     )
+  target_compile_features(${PROJECT_NAME} PUBLIC cxx_constexpr)
   target_link_libraries(${PROJECT_NAME}
     ${test-entities_LIBS}
     ${soft-kernel_LIBS}
     ${softc_LIBS}
-    ${soft-storage-plugins-json_LIBS}
     ${GTEST_LIBRARIES}
     )
 
   add_test(${PROJECT_NAME}
-    ${RUNNER} ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME} "${soft-storage-plugins-mongo_BINARY_DIR}:${soft-storage-plugins-json_BINARY_DIR}")
-
+    ${RUNNER} ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME} "${soft-storage-plugins-json_BINARY_DIR}")
 
   if(UNIX)
     set_property(TEST ${PROJECT_NAME} PROPERTY
-      ENVIRONMENT "LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:$ENV{LD_LIBRARY_PATH}")
+      ENVIRONMENT "LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:$ENV{LD_LIBRARY_PATH}:${soft-storage-plugins-json_BINARY_DIR}")
   else()
     set_property(TEST ${PROJECT_NAME} PROPERTY
-      ENVIRONMENT "PATH=${PATH}:$ENV{PATH}")
+      ENVIRONMENT "PATH=${PATH};$ENV{PATH};${soft-storage-plugins-json_BINARY_DIR}")
   endif()
 
 else(GTEST_FOUND)
