SOFT-161 Fixed comments after review

--- a/foreign/c/test/softc/CMakeLists.txt
+++ b/foreign/c/test/softc/CMakeLists.txt
@@ -16,7 +16,7 @@ if(GTEST_FOUND)
       ENVIRONMENT "LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:$ENV{LD_LIBRARY_PATH}:${soft-storage-plugins-json_BINARY_DIR}")
   else()
     set_property(TEST ${PROJECT_NAME} PROPERTY
-      ENVIRONMENT "PATH=${PATH}:$ENV{PATH}:${soft-storage-plugins-json_BINARY_DIR}")
+      ENVIRONMENT "PATH=${PATH};$ENV{PATH};${soft-storage-plugins-json_BINARY_DIR}")
   endif()
 
   set_property(TEST ${PROJECT_NAME} APPEND PROPERTY
