--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ option (BUILD_GTEST "Download and build Google Test"      OFF)
 set(WITH_FOREIGN_C ON)
 
 set (SOFT_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
+mark_as_advanced(WITH_NUMERICS)
 mark_as_advanced(WITH_FOREIGN_C)
 mark_as_advanced(WITH_STORAGE_HD5)
 mark_as_advanced(WITH_STORAGE_MONGO)
@@ -41,6 +42,7 @@ mark_as_advanced(WITH_STORAGE_EXTERNAL)
 mark_as_advanced(WITH_STORAGE_JSON)
 mark_as_advanced(WITH_HSM)
 mark_as_advanced(WITH_WEB)
+mark_as_advanced(USE_PYTHON3)
 mark_as_advanced(WITH_PLUGIN_SOFT_KERNEL)
 mark_as_advanced(WITH_PLUGIN_HD5)
 mark_as_advanced(WITH_PLUGIN_MONGO)
