SOFT-168 Added unit tests and fixed the return value from softshell such that unit tests fail on failure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -371,7 +371,7 @@ if (WITH_PORTO)
   add_subdirectory(porto/src/json)
   add_subdirectory(porto/src/chemkin)
   add_subdirectory(porto/src/remarcinit)
-  add_subdirectory(porto/src/xyplot)
+#  add_subdirectory(porto/src/xyplot)
   add_subdirectory(porto/src/dft-prepare)
   add_subdirectory(porto/src/remarc-wrapper)
   add_subdirectory(porto/src/parscale-effectiveness-factor)
